# tinder-for-movies

./: .gitignore  README.md  docker-compose.yaml  requirements.md
api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  wait-for-it.sh
api/app/: seed.py
api/data/: app.db
backend/: requirements.txt
tinder-for-movies/: .gitignore  docker-compose.yaml
tinder-for-movies/api/: Dockerfile  README.md  pyproject.toml
tinder-for-movies/api/app/: db.py  main.py  seed.py
tinder-for-movies/api/data/: app.db
tinder-for-movies/api/migrations/: env.py
tinder-for-movies/api/migrations/versions/: 22ad148351b5_initial_migration.py  5f18af0c68f5_initial_migration.py  8aae5f120513_initial_migration.py  8f00b407f3e9_initial_migration.py  909c395418c7_initial_migration.py  a78138bf2d25_initial_migration.py  b81b1c774dd4_initial_migration.py  cfa42e4f868d_initial_migration.py
tinder-for-movies/backend/app/: models.py
tinder-for-movies/ui/: Dockerfile  package.json  tsconfig.json
tinder-for-movies/ui/components/ui/: button.tsx
tinder-for-movies/ui/src/: App.tsx  main.tsx
ui/: Dockerfile  index.html
ui/lib/: shadcn.css
workflows/: api-docker-publish.yml  ui-docker-publish.yml
